V2.5
New Features:
  - settlement generator
  - starship generator
Changes:
  - change payments from sendowl to chec
  - html2canvas to alpha12
  - migrate to new server
  - only load required css files instead of all

V2.4
New Features:
  - encounter generator
  - character concept generator
  - monster builder add buttons to save statblock as image and print statblock
  - monster builder fully integrate class selection
  - monster builder add gear selection
  - monster builder generate attacks from weapons chosen in gear
  - changelog now displayed on site
  - added 'no credits' mode to loot gen
  - alien archive equipment added to loot generator
  - source selection added to loot generator
Changes:
  - monster statblock format fixes (class, RP, racial spell-like abilities)
  - switch loot gen to easier to maintain data model

V2.3
New Features:
  - armor generator
  - character sheets
  - new svg logo
  - ssl certs & force ssl
Changes:
  - nerf low level battery sizes in weapon generator
  - buff 2 handed weapons in weapon generator
  - fix sniper energy damage in weapon generator
  - refactor weapon name generation
  - add error alert to monster builder

V2.2
New Features:
  - monster builder v1.0 beta
Changes:
  - make html files more readable

V2.1
New Features:
  - Sign up to feature notification using formspree
Changes:
  - restructure static files

V2.0
New Features:
  - New responsive side nav menu
  - Homepage
  - Star System Generator v1.0
  - Loot Generator v1.0
Changes:
  - Bootstrap version rolled back to 3.3.7 (previously 4 beta)

V1.2
New Features:
  - Name Generator
  - 'Remove' button for individual entries
Changes:
  - add share buttons
  - change Swoop Hammer to Longhammer
  - no projectile, only energy damage types for blaster, thrower, and beam rifle
  - scout rifle has lower damage to offset max range
  - add truncheon melee type

v1.1
New Features:
  - generate price
  - add basic melee
  - add advanced melee
  - add acid damage type