@@ -202,7 +202,7 @@ var monsterData = {
     "size": "large",
     "type": "magical beast",
     "subtype": "aquatic",
-    "environment": "swamp",
+    "environment": "swamps",
     "climate": "any",
     "planet": "-",
     "organization": ["solitary","pair"],
@@ -2069,6 +2069,111 @@ var monsterData = {
     "source": "PW",
     "page": "179"
   },
+  "Ghibrani":{
+    "cr": "3",
+    "combatType": "spellcaster",
+    "description": "membrane ghibrani mystic",
+    "alignment": "N",
+    "size": "medium",
+    "type": "humanoid",
+    "subtype": "ghibrani",
+    "environment": "any",
+    "climate": "any",
+    "planet": "Elytrio",
+    "organization": ["solitary","pair","coterie(3-6)"],
+    "source": "DS5",
+    "page": "55"
+  },
+  "Ilthisarian":{
+    "cr": "4",
+    "combatType": "expert",
+    "description": "-",
+    "alignment": "LN",
+    "size": "large",
+    "type": "monstrous humanoid",
+    "subtype": "ilthissarian",
+    "environment": "swamps",
+    "climate": "any",
+    "planet": "Arshalin",
+    "organization": ["solitary","pair","nest(3-8)"],
+    "source": "DS5",
+    "page": "56"
+  },
+  "Jubsnuth":{
+    "cr": "9",
+    "combatType": "combatant",
+    "description": "-",
+    "alignment": "CN",
+    "size": "huge",
+    "type": "animal",
+    "subtype": "-",
+    "environment": "any",
+    "climate": "temperate",
+    "planet": "Former Kishalee Worlds",
+    "organization": ["solitary","pair","herd(3-8)"],
+    "source": "DS5",
+    "page": "57"
+  },
+  "Oblivion Shade":{
+    "cr": "8",
+    "combatType": "expert",
+    "description": "-",
+    "alignment": "NE",
+    "size": "medium",
+    "type": "undead",
+    "subtype": "incorporeal",
+    "environment": "any",
+    "climate": "any",
+    "planet": "any",
+    "organization": ["solitary","cabal(1-2) + oblivion shade spawn(4-20)"],
+    "source": "DS5",
+    "page": "58"
+  },
+  "Scyphozoan":{
+    "cr": "3",
+    "combatType": "expert",
+    "description": "scyphozoan mechanic",
+    "alignment": "N",
+    "size": "medium",
+    "type": "aberration",
+    "subtype": "-",
+    "environment": ["aquatic","urban"],
+    "climate": "temerate",
+    "planet": "Primoria",
+    "organization": ["solitary","pair","bloom(3-18)"],
+    "source": "DS5",
+    "page": "59"
+  },
+  "Selamid":{
+    "cr": "6",
+    "combatType": "expert",
+    "description": "-",
+    "alignment": "NG",
+    "size": "medium",
+    "type": "ooze",
+    "subtype": "selamid",
+    "environment": "any",
+    "climate": "any",
+    "planet": "Silselrik",
+    "organization": ["solitary","pair","work crew(3-12)","community(50+)"],
+    "source": "DS5",
+    "page": "60"
+  },
+  "Seprevoi":{
+    "cr": "3",
+    "combatType": "expert",
+    "description": "-",
+    "alignment": "LN",
+    "size": "medium",
+    "type": "monstrous humanoid",
+    "subtype": "seprevoi",
+    "environment": "any",
+    "climate": "any",
+    "planet": "any",
+    "organization": "any",
+    "source": "DS5",
+    "page": "61"
+  },
   /*"Name":{
     "cr": "val",
     "combatType": "val",
@@ -2081,7 +2186,7 @@ var monsterData = {
     "climate": "any",
     "planet": "any",
     "organization": "any",
-    "source": "PW",
+    "source": "DS5",
     "page": "val"
   },*/
 };
