@@ -9,16 +9,16 @@
     <h1>Encounter Generator</h1>
     <p class="lead">Generates encounters for the Starfinder RPG.</p>
     <p></p>
-    <div class="alert-this" style="display: none;">
+    <!--<div class="alert-this" style="display: none;">
       <button type="button" class="close" aria-label="Close" onclick="dismissAlert()"><span aria-hidden="true">&times;</span></button>
       <p><strong>Heads up!</strong> This tool works well enough with current official sources, but will perform even better in the future as more sources are released.<br></p>
-    </div>
+    </div>-->
     <div class="container">
         <div class="row">
             <div class="col-md-4">
                 <select class="selectpicker show-tick" id="SourcePicker" multiple data-style="btn-default" data-width="100%" data-size="10" data-title="Sources" data-selected-text-format="static">
                   <option selected title="Sources">Alien Archive</option>
-                  <option selected title="Sources">Dead Suns 1-4</option>
+                  <option selected title="Sources">Dead Suns 1-5</option>
                   <option selected title="Sources">Pact Worlds</option>
                 </select>
                 <hr style="margin-top: 8px;">
@@ -151,7 +151,7 @@
                   <option>Plains</option>
                   <option>Ruins</option>
                   <option>Sky</option>
-                  <option>Swamp</option>
+                  <option>Swamps</option>
                   <option>Urban</option>
                   <option>Underground</option>
                   <option data-divider="true"></option>
